Finalizando checkout e funil

--- a/checkout/downsell.html
+++ b/checkout/downsell.html
@@ -176,27 +176,25 @@
         </div>
 
         <div class="downsell-card">
-            <h3>Kit Sobrevivência: A Base do Lucro 🚀</h3>
-            <p style="font-size: 0.9rem; color: #666; margin-top: 5px;">Leve os nossos 2 novos manuais premium (30
-                páginas de puro conteúdo) por um valor simbólico.</p>
+            <h3>Guia das Massas Perfeitas 🍰</h3>
+            <p style="font-size: 0.9rem; color: #666; margin-top: 5px;">Leve o manual técnico completo de massas
+                profissionais (Pão de Ló, Chiffon, Amanteigada) por um valor simbólico.</p>
 
             <div class="kit-items">
-                <div class="kit-item"><i class="fa-solid fa-check-circle"></i> Manual de Doces Lucrativos (Giro Rápido)
-                </div>
-                <div class="kit-item"><i class="fa-solid fa-check-circle"></i> Manual de Atendimento & Fidelização</div>
-                <div class="kit-item"><i class="fa-solid fa-star"></i> BÔNUS: Planilha de Precificação Simplificada
-                </div>
+                <div class="kit-item"><i class="fa-solid fa-check-circle"></i> O Segredo do Pão de Ló Estruturado</div>
+                <div class="kit-item"><i class="fa-solid fa-check-circle"></i> Massas Amanteigadas que não Quebram</div>
+                <div class="kit-item"><i class="fa-solid fa-star"></i> BÔNUS: Tabela de Rendimento e Fatias</div>
             </div>
 
             <div class="price-row">
-                <span class="old-p">De R$ 97,00</span>
-                <span class="new-p">R$ 14,90</span>
+                <span class="old-p">De R$ 67,00</span>
+                <span class="new-p">R$ 12,90</span>
             </div>
 
-            <a href="LINK_CAKTO_DOWNSELL_SURVIVAL" class="btn-yes">QUERO O KIT POR R$ 14,90 ➔</a>
+            <a href="https://pay.cakto.com.br/bqn6zi3_704006" class="btn-yes">QUERO O GUIA POR R$ 12,90 ➔</a>
         </div>
 
-        <a href="../ebooks/ebook.html" class="btn-no">Não obrigado, prefiro não levar nada e arcar com as
+        <a href="obrigado.html" class="btn-no">Não obrigado, prefiro não levar nada e arcar com as
             consequências.</a>
     </div>
 
