--- a/checkout/upsell-elite.html
+++ b/checkout/upsell-elite.html
@@ -283,9 +283,9 @@
                 3x.</p>
             <div class="price-area">
                 <span class="old-p">De R$ 67,00</span>
-                <span class="new-p">R$ 19,90</span>
+                <span class="new-p">R$ 13,90</span>
             </div>
-            <a href="LINK_CAKTO_DECORACAO" class="btn-buy">ADICIONAR ESTE ✅</a>
+            <a href="https://pay.cakto.com.br/3cqmqiv_703766" class="btn-buy">ADICIONAR ESTE ✅</a>
         </div>
 
         <!-- OFERTA 2: MASSAS -->
@@ -297,9 +297,9 @@
                 Langoni.</p>
             <div class="price-area">
                 <span class="old-p">De R$ 67,00</span>
-                <span class="new-p">R$ 19,90</span>
+                <span class="new-p">R$ 12,90</span>
             </div>
-            <a href="LINK_CAKTO_MASSAS" class="btn-buy">ADICIONAR ESTE ✅</a>
+            <a href="https://pay.cakto.com.br/bqn6zi3_704006" class="btn-buy">ADICIONAR ESTE ✅</a>
         </div>
 
         <!-- OFERTA 3: NEGÓCIOS / FERRAMENTAS -->
@@ -311,9 +311,22 @@
             </p>
             <div class="price-area">
                 <span class="old-p">De R$ 147,00</span>
-                <span class="new-p">R$ 27,90</span>
+                <span class="new-p">R$ 27,70</span>
             </div>
-            <a href="LINK_CAKTO_NEGOCIOS" class="btn-buy">ADICIONAR ESTE ✅</a>
+            <a href="https://pay.cakto.com.br/myus7z4_704049" class="btn-buy">ADICIONAR ESTE ✅</a>
+        </div>
+
+        <!-- OFERTA 4: KIT SOBREVIVÊNCIA -->
+        <div class="offer-card">
+            <span class="tag card-tag">EMERGÊNCIA</span>
+            <div class="offer-icon"><i class="fa-solid fa-kit-medical"></i></div>
+            <h2>Kit de Sobrevivência</h2>
+            <p class="desc">Manual de Doces Lucrativos (Cookies & Brownies) + Atendimento de Elite + Planilha.</p>
+            <div class="price-area">
+                <span class="old-p">De R$ 97,00</span>
+                <span class="new-p">R$ 19,90</span>
+            </div>
+            <a href="https://pay.cakto.com.br/9e6b2pk_704076" class="btn-buy">ADICIONAR ESTE ✅</a>
         </div>
 
         <!-- OFERTA 4: TUDO (MEGA BUNDLE) -->
@@ -325,9 +338,10 @@
                 Total.</p>
             <div class="price-area">
                 <span class="old-p">De R$ 497,00</span>
-                <span class="new-p">R$ 47,00</span>
+                <span class="new-p">R$ 37,00</span>
             </div>
-            <a href="LINK_CAKTO_FULL" class="btn-buy" style="background: var(--highlight); color: var(--primary);">LEVAR
+            <a href="https://pay.cakto.com.br/a72oiyq_704069" class="btn-buy"
+                style="background: var(--highlight); color: var(--primary);">LEVAR
                 TUDO (QUERO ESTE)</a>
         </div>
 
