--- a/checkout/upsell-premium.html
+++ b/checkout/upsell-premium.html
@@ -304,18 +304,18 @@
 
             <img src="../assets/img/mockup-vendas-ebook.png" alt="Guia de Vendas" class="product-img">
 
-            <h2 class="product-title">Ebook: Como Lucrar Vendendo Bolos Fit</h2>
-            <p class="product-desc">O Método Consolidado para precificar, vender no Instagram, fechar parcerias e
-                escalar sua produção do absoluto zero.</p>
+            <h2 class="product-title">O Império Completo da Confeitaria</h2>
+            <p class="product-desc">O Guia Definitivo com 5 Manuais em 1 (Massas, Recheios de Elite, Bolos de Pote e
+                Doces de Festa). Domine do zero aos R$ 10.000 mensais.</p>
 
             <div class="price-section">
-                <span class="old-price">De R$ 97,00</span>
-                <span class="new-price">R$ 27,90</span>
+                <span class="old-price">De R$ 197,00</span>
+                <span class="new-price">R$ 37,00</span>
             </div>
 
             <div class="buttons-container">
                 <!-- LINK DE CHECKOUT UPSELL CAKTO -->
-                <a href="URL_DA_CAKTO_UPSELL_NEGOCIO" class="btn-yes">QUERO O MÉTODO COMPLETO ➔</a>
+                <a href="https://pay.cakto.com.br/a72oiyq_704069" class="btn-yes">QUERO CONSTRUIR MEU IMPÉRIO ➔</a>
 
                 <!-- LINK PARA A PÁGINA DE DOWNSELL -->
                 <a href="downsell.html" class="btn-no">Não, obrigado. Quero apenas as receitas e vou tentar vender por
