--- a/ebooks/manual-elite/massas-perfeitas.html
+++ b/ebooks/manual-elite/massas-perfeitas.html
@@ -113,6 +113,36 @@
             margin-bottom: 15px;
         }
 
+        .page-divider {
+            width: 100%;
+            height: auto;
+            background: #fff;
+            border: 2px solid var(--accent);
+            padding: 20px;
+            border-radius: 15px;
+            margin: 30px 0;
+        }
+
+        .info-table {
+            width: 100%;
+            border-collapse: collapse;
+            margin-top: 15px;
+        }
+
+        .info-table th {
+            background: var(--primary);
+            color: var(--white);
+            padding: 8px;
+            text-align: left;
+            font-size: 0.85rem;
+        }
+
+        .info-table td {
+            padding: 8px;
+            border-bottom: 1px solid #eee;
+            font-size: 0.85rem;
+        }
+
         .tip-box {
             border: 2px dashed var(--accent);
             padding: 20px;
@@ -172,6 +202,31 @@
                 <strong>💎 Dica Técnica:</strong> A temperatura de todos os ingredientes (ovos, leite, gordura) deve
                 estar a exatos 21°C para a emulsão perfeita.
             </div>
+            <div class="page-divider">
+                <h4 style="color: var(--primary);">🔬 Guia de Proteína da Farinha</h4>
+                <table class="info-table">
+                    <tr>
+                        <th>Tipo</th>
+                        <th>Proteína</th>
+                        <th>Uso na Elite</th>
+                    </tr>
+                    <tr>
+                        <td>T-45 (França)</td>
+                        <td>8-9%</td>
+                        <td>Massas leves e esponjas.</td>
+                    </tr>
+                    <tr>
+                        <td>Tipo 1 (Brasil)</td>
+                        <td>10%</td>
+                        <td>Massas amanteigadas base.</td>
+                    </tr>
+                    <tr>
+                        <td>Farinha de Amêndoas</td>
+                        <td>21%</td>
+                        <td>Estrutura e umidade (Sem glúten).</td>
+                    </tr>
+                </table>
+            </div>
             <div class="footer"><span>Guia das Massas Perfeitas</span><span>03</span></div>
         </div>
 
@@ -183,6 +238,38 @@
             <p>Ao utilizar óleos (lipídios líquidos em temperatura ambiente), você garante um bolo que permanece úmido
                 mesmo sob refrigeração. Já as gorduras sólidas (manteiga) trazem o sabor inconfundível, mas exigem
                 cuidado no armazenamento.</p>
+
+            <div class="page-divider">
+                <h4 style="color: var(--primary);">🧈 Tabela Comparativa: Gorduras na Confeitaria</h4>
+                <table class="info-table">
+                    <tr>
+                        <th>Tipo de Gordura</th>
+                        <th>Ponto de Fusão</th>
+                        <th>Melhor Uso</th>
+                    </tr>
+                    <tr>
+                        <td>Manteiga (82% gordura)</td>
+                        <td>32°C</td>
+                        <td>Sabor premium, massas amanteigadas.</td>
+                    </tr>
+                    <tr>
+                        <td>Óleo de Coco</td>
+                        <td>24°C</td>
+                        <td>Umidade prolongada, bolos tropicais.</td>
+                    </tr>
+                    <tr>
+                        <td>Óleo Neutro (Canola/Girassol)</td>
+                        <td>Líquido</td>
+                        <td>Máxima maciez, chiffon, esponjas.</td>
+                    </tr>
+                </table>
+            </div>
+
+            <div class="tip-box" style="margin-top: 20px;">
+                <strong>💧 Regra de Hidratação:</strong> Para cada 100g de farinha, use 60-80ml de líquido. Massas mais
+                úmidas (80ml) são ideais para bolos que serão refrigerados.
+            </div>
+
             <div class="footer"><span>Guia das Massas Perfeitas</span><span>04</span></div>
         </div>
 
@@ -193,6 +280,38 @@
                 até que a mistura fique esbranquiçada e dobrada de volume.</p>
             <p>Este processo cria milhões de mini-bolhas de ar que serão expandidas pelo fermento no forno. Se você
                 pular esta etapa, seu bolo será denso e pesado.</p>
+
+            <div class="page-divider">
+                <h4 style="color: var(--primary);">⏱️ Cronometragem do Creaming Perfeito</h4>
+                <table class="info-table">
+                    <tr>
+                        <th>Tempo</th>
+                        <th>Textura</th>
+                        <th>Resultado</th>
+                    </tr>
+                    <tr>
+                        <td>2 minutos</td>
+                        <td>Granulada</td>
+                        <td>Insuficiente - bolo denso.</td>
+                    </tr>
+                    <tr>
+                        <td>5-7 minutos</td>
+                        <td>Cremosa e pálida</td>
+                        <td>✅ Ponto ideal - bolo fofo.</td>
+                    </tr>
+                    <tr>
+                        <td>10+ minutos</td>
+                        <td>Separada (óleo visível)</td>
+                        <td>Excesso - bolo oleoso.</td>
+                    </tr>
+                </table>
+            </div>
+
+            <div class="tip-box" style="margin-top: 20px;">
+                <strong>🌡️ Temperatura da Manteiga:</strong> Use manteiga em ponto de pomada (18-20°C). Se estiver
+                muito fria, não incorpora ar. Se estiver derretida, não segura as bolhas.
+            </div>
+
             <div class="footer"><span>Guia das Massas Perfeitas</span><span>05</span></div>
         </div>
 
@@ -203,7 +322,16 @@
                 de aniversário com muitos recheios leves.</p>
             <p>O segredo aqui é a separação rigorosa dos ovos. As claras devem ser batidas em picos firmes, mas nunca
                 "quebradiços". A incorporação deve ser feita manualmente, com movimentos circulares suaves do centro
-                para fora.</p>
+                para fora.
+            </p>
+            <div class="page-divider">
+                <h4 style="color: var(--primary);">☁️ Protocolo Chiffon: 3 Regras de Sorte</h4>
+                <p style="font-size: 0.9rem; margin-top: 10px;">
+                    1. <strong>Frio de Janeiro:</strong> Claras batidas em temperatura ambiente.<br>
+                    2. <strong>Movimento J:</strong> Incorpore em formato de 'J' do fundo para cima.<br>
+                    3. <strong>Anti-Gravidade:</strong> Esfrie o bolo de cabeça para baixo para não murchar.
+                </p>
+            </div>
             <div class="footer"><span>Guia das Massas Perfeitas</span><span>06</span></div>
         </div>
 
@@ -214,6 +342,38 @@
                 funciona como uma esponja que retém o sabor sem perder a forma.</p>
             <p>Utilize farinhas com menor teor de proteína para garantir que a rede seja frágil o suficiente para
                 absorver líquidos, mas forte o suficiente para não colapsar.</p>
+
+            <div class="page-divider">
+                <h4 style="color: var(--primary);">💧 Capacidade de Absorção por Tipo de Massa</h4>
+                <table class="info-table">
+                    <tr>
+                        <th>Tipo de Massa</th>
+                        <th>Absorção Máxima</th>
+                        <th>Calda Ideal</th>
+                    </tr>
+                    <tr>
+                        <td>Pão de Ló Clássico</td>
+                        <td>40ml por 100g</td>
+                        <td>Calda de açúcar 1:1</td>
+                    </tr>
+                    <tr>
+                        <td>Genovesa</td>
+                        <td>50ml por 100g</td>
+                        <td>Licor + açúcar</td>
+                    </tr>
+                    <tr>
+                        <td>Biscuit</td>
+                        <td>30ml por 100g</td>
+                        <td>Calda leve (café, chá)</td>
+                    </tr>
+                </table>
+            </div>
+
+            <div class="tip-box" style="margin-top: 20px;">
+                <strong>🔬 Teste da Esponja:</strong> Pressione levemente o bolo. Se voltar ao formato original em 2
+                segundos, a estrutura está perfeita para receber calda.
+            </div>
+
             <div class="footer"><span>Guia das Massas Perfeitas</span><span>07</span></div>
         </div>
 
@@ -225,14 +385,76 @@
             <p>A gordura é um excelente condutor de aroma. Se você aquecer levemente o seu óleo com ramos de alecrim ou
                 tomilho e depois coar, seu bolo terá uma nota aromática invisível que deixará seus clientes intrigados e
                 apaixonados.</p>
+
+            <div class="page-divider">
+                <h4 style="color: var(--primary);">🌿 Guia de Infusões Naturais</h4>
+                <table class="info-table">
+                    <tr>
+                        <th>Ingrediente</th>
+                        <th>Método</th>
+                        <th>Combinação Ideal</th>
+                    </tr>
+                    <tr>
+                        <td>Baunilha (fava)</td>
+                        <td>Infundir no leite morno 30min</td>
+                        <td>Massas brancas, chiffon</td>
+                    </tr>
+                    <tr>
+                        <td>Raspas de Limão</td>
+                        <td>Misturar direto no açúcar</td>
+                        <td>Bolos cítricos, esponjas</td>
+                    </tr>
+                    <tr>
+                        <td>Alecrim</td>
+                        <td>Infundir no óleo aquecido</td>
+                        <td>Bolos de azeite, mel</td>
+                    </tr>
+                </table>
+            </div>
+
+            <div class="tip-box" style="margin-top: 20px;">
+                <strong>💎 Segredo da Elite:</strong> Use sal marinho em flocos (Maldon) para realçar sabores doces. 1g
+                por receita faz toda a diferença.
+            </div>
             <div class="footer"><span>Guia das Massas Perfeitas</span><span>08</span></div>
         </div>
 
-        <!-- CAP 7-14 SIMULATION (Synthesizing content to fill pages) -->
+        <!-- CAP 7: ESTRUTURA CAMADAS -->
         <div class="page">
             <h2>Capítulo 7: Estrutura para Bolos de Camadas</h2>
             <p>Quanto mais alto o bolo, mais densa deve ser a massa base. Massas de alto teor de gordura (como a Red
                 Velvet clássica) são melhores para sustentar o peso de 3 ou 4 camadas de recheio pesado.</p>
+
+            <div class="page-divider">
+                <h4 style="color: var(--primary);">🏗️ Cálculo de Estrutura por Altura</h4>
+                <table class="info-table">
+                    <tr>
+                        <th>Altura Total</th>
+                        <th>Espessura da Massa</th>
+                        <th>Tipo Recomendado</th>
+                    </tr>
+                    <tr>
+                        <td>15-20cm (2 andares)</td>
+                        <td>2cm cada</td>
+                        <td>Chiffon, Esponja</td>
+                    </tr>
+                    <tr>
+                        <td>25-30cm (3 andares)</td>
+                        <td>2.5cm cada</td>
+                        <td>Amanteigada, Red Velvet</td>
+                    </tr>
+                    <tr>
+                        <td>35cm+ (4+ andares)</td>
+                        <td>3cm cada</td>
+                        <td>Pound Cake, Densa</td>
+                    </tr>
+                </table>
+            </div>
+
+            <div class="tip-box" style="margin-top: 20px;">
+                <strong>⚖️ Regra de Ouro:</strong> O peso do recheio não deve ultrapassar 150% do peso da massa. Use uma
+                balança para garantir estabilidade.
+            </div>
             <div class="footer"><span>Guia das Massas Perfeitas</span><span>09</span></div>
         </div>
 
@@ -266,8 +488,31 @@
 
         <div class="page">
             <h2>Capítulo 12: Erros Comuns e Como Corrigi-los</h2>
-            <p>Bolo com cratera no meio? Excesso de fermento ou temperatura alta demais. Bolo que sola na base? Falta de
-                batimento ou manteiga fria demais.</p>
+            <div class="page-divider">
+                <h4 style="color: var(--primary);">🚑 Primeiros Socorros do Forno</h4>
+                <table class="info-table">
+                    <tr>
+                        <th>Sintoma</th>
+                        <th>Causa Provável</th>
+                        <th>Solução</th>
+                    </tr>
+                    <tr>
+                        <td>Bolo "Vulcão"</td>
+                        <td>Forno muito quente</td>
+                        <td>Reduza 10°C e use ventilação.</td>
+                    </tr>
+                    <tr>
+                        <td>Bolo "Solado"</td>
+                        <td>Liquido frio demais</td>
+                        <td>Suba a temp. dos ovos/leite.</td>
+                    </tr>
+                    <tr>
+                        <td>Top "Rachado"</td>
+                        <td>Excesso de fermento</td>
+                        <td>Pese com balança de precisão.</td>
+                    </tr>
+                </table>
+            </div>
             <div class="footer"><span>Guia das Massas Perfeitas</span><span>14</span></div>
         </div>
 
@@ -282,6 +527,26 @@
                 <p style="text-align: center; margin-top: 10px;">Suas receitas nunca mais serão as mesmas.</p>
             </div>
             <div class="footer"><span>Guia das Massas Perfeitas</span><span>15</span></div>
+        </div>
+
+        <!-- PAGE 16: BONUS -->
+        <div class="page">
+            <h2>BÔNUS: O Protocolo da Massa Inesquecível</h2>
+            <div class="chapter-box" style="background: var(--bg); border: 2px dashed var(--primary);">
+                <p><strong>Checklist de Pré-Produção:</strong></p>
+                <ul style="list-style: none; margin-top: 10px;">
+                    <li><i class="fas fa-check" style="color: var(--primary); margin-right: 10px;"></i> Balança zerada e
+                        ingredientes pesados (Mise en Place).</li>
+                    <li><i class="fas fa-check" style="color: var(--primary); margin-right: 10px;"></i> Forno
+                        pré-aquecido por exatos 20 minutos.</li>
+                    <li><i class="fas fa-check" style="color: var(--primary); margin-right: 10px;"></i> Formas untadas
+                        com desmoldante profissional.</li>
+                    <li><i class="fas fa-check" style="color: var(--primary); margin-right: 10px;"></i> Foco total: Sem
+                        distrações durante a batida.</li>
+                </ul>
+            </div>
+            <p style="text-align: center; margin-top: 50px;">"A perfeição não é um acidente, é um processo."</p>
+            <div class="footer"><span>Guia das Massas Perfeitas</span><span>16</span></div>
         </div>
 
     </div>
