--- a/index.html
+++ b/index.html
@@ -214,13 +214,13 @@
 
                 <div class="price-box">
                     <span class="old-price">De R$ 67,90</span>
-                    <span class="new-price">Por apenas R$ 17,90</span>
+                    <span class="new-price">Por apenas R$ 13,90</span>
                     <p style="color: #4ade80; font-size: 1.2rem; margin-top: 10px; font-weight: bold;">💰 Economize R$
                         50,00 (73% OFF)</p>
                 </div>
                 <p class="offer-alert">⚠️ ATENÇÃO: Esse preço promocional pode subir a qualquer momento!</p>
 
-                <a href="https://pay.cakto.com.br/6yte6xm_700816" target="_blank"
+                <a href="https://pay.cakto.com.br/3cqmqiv_703766" target="_blank"
                     class="btn btn-primary btn-large btn-glow">COMPRAR AGORA</a>
 
                 <div class="guarantee mt-2">
